--- a/src/main/webapp/database-explorer/views/explorer.html
+++ b/src/main/webapp/database-explorer/views/explorer.html
@@ -66,8 +66,9 @@
 
 		<div class="bs-callout bs-callout-info">
 			<h4>Query Help</h4>
-			<p>Make sure you enclose column names in double-quotes and text values in single-quotes, for example
-				<code>SELECT * FROM omdb WHERE "Genre" LIKE '%Horror%'</code>. Also, text-based conditions are 
+			<p>Note that the "wildcard" character in queries is '%'. If you are editing a query manually rather than using
+				the visual query designer, make sure you enclose column names in double-quotes and text values in single-quotes, 
+				for example <code>SELECT * FROM omdb WHERE "Genre" LIKE '%Horror%'</code>. Note also that text-based conditions are 
 				case-sensitive unless you use the ILIKE operator instead of LIKE or =.
 			</p>
 		</div>
