--- a/src/main/webapp/less/buttons.less
+++ b/src/main/webapp/less/buttons.less
@@ -36,6 +36,14 @@ a.disabledButton {
 	text-decoration: none;
 }
 
+.button.micro,
+button.micro {
+	padding: 0px;
+	border: none;
+	width: 20px;
+	height: 20px;
+}
+
 a.disabledButton, a.button[disabled], button[disabled] {
 	color: @text-muted;
 }
