fixed typo - see issue #56

--- a/src/main/webapp/database/components/export-dialog/exportDialog.html
+++ b/src/main/webapp/database/components/export-dialog/exportDialog.html
@@ -9,7 +9,7 @@
 	</select>
 	</div>
 	<div>
-	<p>Please give you export file a name</p>
+	<p>Please give your export file a name</p>
 		<input type="text"  name="exportName" ng-maxlength="128" required ng-minlength="2"  ng-model="ngDialogData.exportInfo.exportName"/>
 		<div ng-messages="exportForm.exportName.$error">
 			<div ng-message="required" class="error">Please provide a name.</div>
