changed API button label - see issue #56

--- a/src/main/webapp/components/apidialog/apidialogbutton.html
+++ b/src/main/webapp/components/apidialog/apidialogbutton.html
@@ -1,1 +1,1 @@
-<button class="button" ng-click="openApiDialog()">API</button>
+<button class="button" ng-click="openApiDialog()">API and download</button>
