use same styles for add and update data form elements. See issue #40

--- a/src/main/webapp/less/tables.less
+++ b/src/main/webapp/less/tables.less
@@ -136,6 +136,8 @@ table.data-table td.add{
 }
 
 /* ensures that controls don't overspill their cells */
+.data-table input,
+.data-table textarea,
 .table-data-form input, 
 .table-data-form textarea
 {
