styled user messages on front page

--- a/src/main/webapp/components/welcome/welcome.html
+++ b/src/main/webapp/components/welcome/welcome.html
@@ -20,7 +20,7 @@
 		<a href="mailto:info@cetis.org.uk">info@cetis.org.uk</a>
 	</p>
 
-	<p ng-show="showPendingMessage()"><em>{{pendingMessage}}</em></p>
+	<div class="bs-callout bs-callout-info" ng-show="showPendingMessage()"><p>{{pendingMessage}}</p></div>
 </div>
 	 
 	 
