Changed file upload to a central service.  Added csv import for existing databases.

--- a/src/main/webapp/database-explorer/views/explorer.html
+++ b/src/main/webapp/database-explorer/views/explorer.html
@@ -17,6 +17,9 @@
 					<i class="pe-7s-angle-right pe-va"></i>
 				</h4>
 			</div>
+			<p>
+				<button class="button" ng-click="showImport()">Import CSV as new table</button>
+			</p>
 		</div>
 		
 		<div class="panel">
