--- a/src/main/webapp/database/views/database.html
+++ b/src/main/webapp/database/views/database.html
@@ -185,7 +185,7 @@
 		</div>
 	</div>
 </div>
-<div class="row" ng-show="main.importProgress == 'IN_PROGRESS'">
+<div class="row" ng-show="main.importProgress == 'QUEUED'">
 	The database is still being imported, the project owner will be 
 	sent an email when this process has completed.
 </div>
