Removed wording on trial projects

--- a/src/main/webapp/project/components/projectform/projectform.html
+++ b/src/main/webapp/project/components/projectform/projectform.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class="formItem">
-    <label for="privateProject">Exclude from public project list<span class="explanation">By default, basic details (project name, description, and owner) about all full projects are included in the public version of the project list. Check this box to exclude this project from the list.<br> (Leaving this box unchecked will <i>not</i> give members of the public access to any data stored in ORDS, unless a project member specifically chooses to make this available.)</span></label>
+    <label for="privateProject">Exclude from public project list<span class="explanation">By default, basic details (project name, description, and owner) about all full projects are included in the public version of the project list. Check this box to exclude this project from the list.<br> (Leaving this box unchecked will <i>not</i> give members of the public access to any data stored in it, unless a project member specifically chooses to make this available.)</span></label>
     <input ng-model="project.privateProject" type="checkbox" name="privateProject" id="privateProject" value="private">
 </div>
 
