updated footer with correct details

--- a/src/main/webapp/components/footer/footer.html
+++ b/src/main/webapp/components/footer/footer.html
@@ -1,15 +1,17 @@
 
 	<div class="footer">
-        <a href="http://www.it.ox.ac.uk/legal/privacy/">
+        <a href="http://www.trunkdb.com/index.html#security">
             Privacy
         </a> | 
+        <!-- TODO move documentation over
         <a href="http://ords.ox.ac.uk/documentation.xml">
             Help
         </a> | 
-        <a href="http://ords.ox.ac.uk/">
+        -->
+        <a href="http://www.trunkdb.com/">
             About us
         </a> | 
-        <a href="mailto:ords@it.ox.ac.uk">
+        <a href="mailto:info@trunkdb.com">
             Contact us
         </a>
 	</div>
