--- a/src/main/webapp/database-explorer/views/explorer.html
+++ b/src/main/webapp/database-explorer/views/explorer.html
@@ -72,7 +72,8 @@
 			<p>Note that the "wildcard" character in queries is '%'. If you are editing a query manually rather than using
 				the visual query designer, make sure you enclose column names in double-quotes and text values in single-quotes, 
 				for example <code>SELECT * FROM omdb WHERE "Genre" LIKE '%Horror%'</code>. Note also that text-based conditions are 
-				case-sensitive unless you use the ILIKE operator instead of LIKE or =.
+				case-sensitive unless you use the ILIKE operator instead of LIKE or =. Also, if you create a query using the visual query
+				designer, then edit it manually in the Query field, it will no longer be possible to edit it using the visual query designer.
 			</p>
 		</div>
 	</div>
